sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:6: error: '<-' expected but '=' found.
    for (i=1 to getNombreValeurs()-1) {
          ^AlgBubbleSort1:12: error: illegal start of simple expression
  }
  ^